<resources>
    <string name="app_name">Dex Online</string>
    <string name="text_loading_screen">© 2023\nCiprian Trandafir. All rights reserved.</string>
    <string name="copyright">© Ciprian Trandafir</string>
    <string name="acas">Acasă</string>
    <string name="caut">Caută</string>
    <string name="salvate">Salvate</string>
    <string name="set_ri">Setări</string>
    <string name="setari">Setări</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_something">Caută un cuvânt..</string>
    <string name="word_of_day">Cuvântul zilei</string>
    <string name="why">De ce?</string>
    <string name="definitie">Definiție:</string>
    <string name="source">sursa:</string>
    <string name="added_by">adăugată de</string>
    <string name="search_history">Istoric căutări</string>
    <string name="bookmarks">Definiții salvate</string>
    <string name="nothing_to_see">Nimic de văzut aici</string>
    <string name="serach_hint_1">Ce doriți să căutați astăzi?</string>
    <string name="notifications">Notificări</string>
    <string name="general">General</string>
    <string name="do_you_want_notifications">Doriți să primiți notificări cu cuvântul zilei?</string>
    <string name="what_time_notificaiton">La ce oră doriți să primiți notificarea?</string>
    <string name="include_definition">Include definiția</string>
    <string name="include_reason">Include motivul</string>
    <string name="preview">Previzualizare</string>
    <string name="more_settings">Mai multe setări</string>
    <string name="about_app">Despre aplicație</string>
    <string name="dexonline_ro">dexonline.ro</string>
</resources>