<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Home">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/wordOfDayWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30sp"
                android:layout_marginEnd="30sp"
                android:layout_marginStart="30sp"
                card_view:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:gravity="center">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/wordOfDayTitle"
                            android:padding="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            card_view:layout_constraintTop_toTopOf="parent"
                            card_view:layout_constraintEnd_toEndOf="parent"
                            card_view:layout_constraintStart_toStartOf="parent"
                            android:text="@string/word_of_day"
                            android:textStyle="bold"
                            android:textSize="20sp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/wordOfDay"
                            android:padding="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            card_view:layout_constraintTop_toTopOf="parent"
                            card_view:layout_constraintEnd_toEndOf="parent"
                            card_view:layout_constraintStart_toStartOf="parent"
                            android:textStyle="bold"
                            android:textSize="18sp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/wordOfDayImage"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:contentDescription="@string/todo"/>
                    <!-- android:layout_height="wrap_content"-->

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:padding="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            card_view:layout_constraintTop_toTopOf="parent"
                            card_view:layout_constraintStart_toStartOf="parent"
                            android:text="@string/why"
                            android:textStyle="bold"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/wordOfDayReason"
                            android:padding="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            card_view:layout_constraintTop_toTopOf="parent"
                            card_view:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:padding="5dp"
                            android:layout_marginTop="10sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            card_view:layout_constraintTop_toTopOf="parent"
                            card_view:layout_constraintStart_toStartOf="parent"
                            android:text="@string/definitie"
                            android:textStyle="bold"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/wordOfDayDefinition"
                            android:padding="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            card_view:layout_constraintTop_toTopOf="parent"
                            card_view:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            card_view:layout_constraintStart_toStartOf="parent"
                            card_view:layout_constraintTop_toTopOf="parent"
                            card_view:layout_constraintBottom_toBottomOf="parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/source"/>

                            <TextView
                                android:id="@+id/wordOfDayDefinitionSource"
                                android:layout_marginStart="5dp"
                                android:theme="@style/AppHref"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            card_view:layout_constraintEnd_toEndOf="parent"
                            card_view:layout_constraintTop_toTopOf="parent"
                            card_view:layout_constraintBottom_toBottomOf="parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/added_by"/>

                            <TextView
                                android:id="@+id/wordOfDayDefinitionAddedBy"
                                android:layout_marginStart="5dp"
                                android:theme="@style/AppHref"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewWordOfDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wordOfDayWrapper" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>